{
    "name": "PlayerControls",
    "maps": [
        {
            "name": "PlayerMovement",
            "id": "dad98316-b6ab-4f2e-a5b8-08aae44125c5",
            "actions": [
                {
                    "name": "Locomotion",
                    "type": "PassThrough",
                    "id": "eba95bcc-d44b-400e-b3f0-bccf78f4625e",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "WASD",
                    "id": "c620bfad-176c-4445-b4bd-2f8746b0f2d3",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Locomotion",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "fd294d34-7690-4e8a-8b6e-7740699dd2ff",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Locomotion",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "32ca3d8d-d4a6-4b48-ac95-7203d15b3d9d",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Locomotion",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "e731eae4-7b4e-4edd-b093-ed35a46c9b87",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Locomotion",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "df8192a8-51e3-4a78-be44-bff99ddc5d15",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Locomotion",
                    "isComposite": false,
                    "isPartOfComposite": true
                }
            ]
        },
        {
            "name": "PlayerActions",
            "id": "46d9c977-df46-46c2-bf92-bae1f05a4989",
            "actions": [
                {
                    "name": "Sprint",
                    "type": "Button",
                    "id": "e46e9013-3ee1-476a-b9a0-0cf700f86fdb",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Jump",
                    "type": "Button",
                    "id": "108c55ac-b653-4f1b-8a69-9b4515d8160a",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Aim",
                    "type": "Button",
                    "id": "462ab617-0cae-4b5f-b0c2-a34b926e5e9f",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Fire",
                    "type": "Button",
                    "id": "e81b725b-8eae-4cd1-94ac-5352049dab3f",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "799aa45e-e68e-4073-bc3b-11f4126f34a9",
                    "path": "<Keyboard>/leftShift",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Sprint",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "7f48d022-ae16-4e87-89c5-242265ddba9e",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Jump",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "d155f33d-7cb2-47d9-9dcc-b74f301c1521",
                    "path": "<Mouse>/rightButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Aim",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "7df694d1-278c-4614-ad05-15d7f5ef2a16",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Fire",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "Camera",
            "id": "6f8e5be3-438e-49f8-823c-5e98a7a1041d",
            "actions": [
                {
                    "name": "LookAround",
                    "type": "PassThrough",
                    "id": "1c36c46a-389f-47ce-9553-2f92e8be0cac",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "f6ba2853-15bd-4dac-bf42-ce95b15d3e7a",
                    "path": "<Mouse>/delta",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "LookAround",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}